team chat + notification

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -55,7 +55,7 @@
             </button>
         </form>
 
-        <!-- Aide pour le développeur (Visible uniquement en DEBUG ou pour tester) -->
+        <!-- Aide pour le développeur (Visible uniquement en DEBUG ou pour tester) 
         <div class="mt-8 pt-6 border-t border-slate-100 text-center">
             <p class="text-xs text-slate-400 uppercase font-bold mb-3">Comptes de Test</p>
             <div class="flex flex-wrap justify-center gap-2">
@@ -66,7 +66,7 @@
                 <span class="px-2 py-1 bg-purple-50 text-purple-600 text-xs rounded border border-purple-100 cursor-pointer hover:bg-purple-100" onclick="fillLogin('tech_daf')">tech_daf</span>
             </div>
         </div>
-    </div>
+    </div> --->
 
     <script>
         function fillLogin(user) {
