formulaire fcpi+type de demande

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,8 @@
             }
         }
     </script>
+    <!--  LES ONGLETS 👇 -->
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <!-- Icônes Lucide -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- Chart.js -->
